--- a/app.html
+++ b/app.html
@@ -181,6 +181,6 @@ OTHER DEALINGS IN THE SOFTWARE.
                 </tr>
             </tfoot>
         </table>
-        <p class="credits">MySQL Slow Query Log Visualizer &copy; 2011 <a href="http://www.neurofuzzy.net">Neurofuzzy Consulting</a></p>
+        <p class="credits">MySQL Slow Query Log Visualizer &copy; 2020 </p>
     </body>  
 </html>  
